<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <DUT Name="T_MOTOR_ACTIVE_LOW" Id="{a2cadf9e-d2e2-4e97-ab2b-6730e97fe1bc}">
    <Declaration><![CDATA[TYPE T_MOTOR_ACTIVE_LOW :
STRUCT
	bValue:	BOOL	:= FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>