<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="T_SIM_MOTOR_STAT" Id="{91af19d4-208f-48f7-a423-e4ef68fbafcd}">
    <Declaration><![CDATA[TYPE T_SIM_MOTOR_STAT :
STRUCT
	bInitialised:	BOOL 	:= FALSE;
	nErrorCode: 	DINT 	:= E_MOTOR_ERROR.SIM_NOT_INITIALISED;	(* Error code *)
	sErrorText: 	STRING 	:= 'NOT INITIALISED'; 			(* Error text *)
	sStatus: 		STRING 	:= 'ERROR'; 					(* motor status in textual form, e.g. 'OK' or 'ERROR'*)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>